Functionality added to the selection bar: the fields are not reset every time the user write into the textfield. They are only reset when the selected table change